supplement/implementation/examples/negative/lsplitOnlySkips.bgv
let c1, c2 = new Skip in
lsplit (Skip; Skip) c1;
acquire c2
